--- a/project1_style.css
+++ b/project1_style.css
@@ -9,6 +9,7 @@ body {
 }
 html {
 	font-size: 62.5%;
+	scroll-behavior: smooth;
 }
 h1 {
 	font-size: 2.6rem;
@@ -37,10 +38,10 @@ a {
 }
 button {
 	padding: 2rem 6rem;
-	background-color: #4c6e97;
 	border: none;
 	color: white;
 	font-size: 1.8rem;
+	background-color: #4c6e97;
 	cursor: pointer;
 	transition: background-color 0.5s
 		ease-in-out;
@@ -52,6 +53,9 @@ button:hover {
 .main-head {
 	background-color: #131c27;
 	color: white;
+	position: fixed;
+	z-index: 5;
+	width: 100%;
 }
 
 nav {
@@ -77,7 +81,7 @@ nav ul {
 	letter-spacing: 2px;
 }
 .hero {
-	min-height: 90vh;
+	min-height: 100vh;
 	background-image: linear-gradient(
 			rgb(0, 0, 0, 0.5),
 			transparent
@@ -98,7 +102,6 @@ nav ul {
 .hero h3 {
 	padding: 3rem;
 }
-/* Benefits section */
 .locations {
 	min-height: 100vh;
 	background-image: linear-gradient(
@@ -119,14 +122,17 @@ nav ul {
 	margin: auto;
 	text-shadow: 0.5px 0.5px 4px
 		rgb(207, 205, 206);
+	color: white;
 }
 .locations-head h2 {
 	padding: 1rem 0rem;
 	text-decoration: underline;
 	text-decoration-thickness: 0.5rem;
+	font-size: 4rem;
 }
 .locations-head h3 {
-	padding: 4rem 0rem;
+	padding: 1rem 0rem;
+	font-size: 2.5rem;
 }
 .cloud {
 	position: absolute;
@@ -134,6 +140,7 @@ nav ul {
 	right: 0%;
 	width: 50%;
 	height: 60%;
+	pointer-events: none;
 }
 .moving-cloud-1 {
 	animation: cloudAnimation 4s infinite
@@ -146,13 +153,7 @@ nav ul {
 	animation: cloudAnimation 3.5s
 		infinite alternate ease-in-out;
 }
-.locations-head h2 {
-	font-size: 4rem;
-}
-.locations-head h3 {
-	font-size: 2.5rem;
-	padding-top: 1rem;
-}
+
 @keyframes cloudAnimation {
 	from {
 		transform: translate(10%, -10%);
@@ -160,6 +161,117 @@ nav ul {
 	to {
 		transform: translate(0%, 0%);
 	}
+}
+/* Benefits section */
+.benefits {
+	height: 100vh;
+	background-image: url(pexels-daniel-jurin-1835712.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+.benfits-head {
+	/* background-color: transparent; */
+	padding: 3rem;
+	padding-top: 7rem;
+	min-height: 30vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: #4c6e97;
+	/* text-shadow: 4px 7px 7px #27394e; */
+}
+.benfits-head h3 {
+	padding: 1rem;
+}
+.cards {
+	width: 90%;
+	margin: auto;
+	display: flex;
+	/* min-height: 20vh; */
+	max-height: 100vh;
+	align-items: center;
+	flex-wrap: wrap;
+	padding-top: 2rem;
+}
+.card {
+	text-align: center;
+	background-color: white;
+	flex: 1 1 25rem;
+	min-height: 40vh;
+	margin: 2rem 5rem;
+	box-shadow: 0px 10px 10px
+			rgba(0, 0, 0, 0.1),
+		0px 20px 20px rgba(0, 0, 0, 0.1);
+}
+.icon-div {
+	background-color: #131c27;
+	background-color: #4c6e97;
+	cursor: pointer;
+	transition: background-color 0.5s
+		ease-in-out;
+}
+.icon-div:hover {
+	background-color: #27394e;
+}
+a {
+	padding: rem;
+}
+.icons {
+	color: white;
+	font-size: 6rem;
+	padding: 2rem;
+	pointer-events: none;
+}
+.card h4,
+.card p {
+	padding: 1rem;
+}
+#contact {
+	min-height: 90vh;
+	background-image: url(pexels-james-wheeler-1578749.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* text-align: center; */
+}
+.form-wrapper {
+	background: rgba(19, 28, 39, 0.7);
+	width: 50%;
+	height: 60vh;
+	color: white;
+	border-radius: 20px;
+}
+.form-head {
+	text-align: center;
+	padding: 3rem;
+}
+.name-form,
+.email-form {
+	text-align: center;
+	padding: 3rem;
+}
+.form-wrapper label {
+	margin: 0rem 3rem;
+}
+.form-wrapper input {
+	padding: 1rem 3rem;
+}
+.form-wrapper button {
+	width: 100%;
+	padding: 2rem;
+	margin-top: 1rem;
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 20px;
+}
+footer {
+	min-height: 10vh;
+	background: #131c27;
+	color: white;
 }
 /* media query */
 @media screen and (max-width: 1100px) {
